--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ inflection==0.5.1
 msgpack==1.1.1
 oauthlib==3.3.1
 packaging==25.0
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
